# svg

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  acdoxygen.m4  amdoxygen.am  configure.ac  doxygen.svg.cfg  svg.pc  svg.pc.in
.mailbox/: svg.txt.gpg
include/: svg.h
src/: svg.c
tests/: test-bulk-svg.c  test-one-svg.c
